--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 POSTGRES_HOST="localhost"
 POSTGRES_DB="store_backend"
+POSTGRES_TEST_DB="store_backend_test"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="admin"
-ENV="dev"
+ENV="test"
 BCRYPT_PASSWORD="speak-friend-and-enter"
 SALT_ROUNDS="10"
 
