--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "server.ts",
   "scripts": {
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "lint": "eslint . --ext .ts",
+    "prettier": "prettier --config .prettierrc.json --write \"src/**/*.ts\" ",
+    "start": "nodemon --watch \"./**/*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "build": "npx tsc",
+    "start:prod": "npm run build ",
+    "test": "db-migrate --env test up && npm run build && jasmine && db-migrate reset --env test",
+    "run": "npx tsc && node ./dist/index.js"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.3.0",
