add auth controller and middleware modify models

--- a/.env
+++ b/.env
@@ -6,4 +6,7 @@ POSTGRES_PASSWORD="admin"
 ENV="test"
 BCRYPT_PASSWORD="speak-friend-and-enter"
 SALT_ROUNDS="10"
+PORT=4000
+ACCESS_TOKEN_SECRET="noobs123"
+
 
