--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0"
+    "nodemon": "^2.0.19",
+    "pg": "^8.8.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
