finish integration testing

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_DB="store_backend"
 POSTGRES_TEST_DB="store_backend_test"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="admin"
-ENV="dev"
+ENV="test"
 BCRYPT_PASSWORD="speak-friend-and-enter"
 SALT_ROUNDS="10"
 PORT=4000
