--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npx tsc",
     "start:prod": "npm run build ",
     "test": "db-migrate --env test up && npm run build && jasmine && db-migrate reset --env test",
-    "run": "npx tsc && node ./dist/index.js"
+    "run": "npx tsc && node ./dist/server.js"
   },
   "author": "Udacity",
   "license": "ISC",
